syntax = "proto3";

message Meta {
   string device_id = 1;
   string firmware = 2;
}

enum MeasurementType {
    UnknownMeasurementType = 0;
    environment = 1;
    energy = 2;
    lora = 3;
}

enum SensorName {
    UnknownSensor = 0;
    HDC1080 = 1;
    SCD30 = 2;
    VEML7700 = 3;
    BMP388 = 4;
    LORA = 5;
    BATTERY = 6;
    EMONPI = 7;
    BOILERLIGHT = 8;
    DHT22 = 9;
    VIRTUAL = 20;
}

message SensorField {
    SensorName sensor_name = 1;
    oneof type {
        // Environment
        float temperature = 2;
        float humidity = 3;
        float pressure = 4;
        float co2 = 5;
        float light = 6;
        float dewpoint = 40;

        // Energy
        float power = 7;
        bool boiler_state = 8;
        int32 boiler_on_time = 9;
        float voltage = 20;
        
        // LORA
        float rssi = 30;
        float frequency_error = 31;
        float snr = 32;
   }
}

message Packet {
   int32 packet_id = 1;
   Meta meta = 2;
   MeasurementType measurement_type = 3;
   repeated SensorField sensorFields = 4;
} 